2008-06-24  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktypeutils.h: deprecate gtk_type_init() unconditionally
	(also for GTK_COMPILATION). Move some deprecated typedefs around
	to reduce the mess with zillions of deprecated sections.

	* gtk/gtkmain.c (do_post_parse_initialization): replace the call
	to gtk_type_init() by g_type_init() and gtk_object_get_type() even
	though the latter is probably completely pointless.

2008-06-24  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkdialog.c (gtk_dialog_init): also revert change in how
	the dialog's vbox was added (bug #539732).

2008-06-24  Carlos Garnacho  <carlos@imendio.com>

	* gtk/gtkdialog.[ch]: Remove container implementation, which isn't
	thought for handling non-direct children. Fixes #539732.
	(gtk_dialog_pack_start) (gtk_dialog_pack_end): Removed as well, it
	doesn't provide enough control to API users (removing, reordering...),
	this is better handled through:
	(gtk_dialog_get_content_area): New function which just returns
	dialog->vbox.
	* gtk/gtk.symbols: Modify accordingly.
	* docs/reference/gtk/tmpl/gtkdialog.sgml: Update docs to recommend
	using gtk_dialog_get_[action|content]_area() instead of accessing
	dialog struct members directly.

2008-06-24  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkassistant.h
	* gtk/gtkcellrenderer.h
	* gtk/gtkfilechooserentry.h
	* gtk/gtkprivate.h
	* gtk/gtktooltip.h
	* gtk/gtktreeview.h
	* gtk/gtkwindow.h: no need to include gtkwidget.h or gtkobject.h
	if there is any other widget included, they all have to include
	their respective parent classes (the is-a relation works for
	includes too).

2008-06-24  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktextutil.h: remove includes from this internal header.

	* gtk/gtktextutil.c: include gtktextbuffer.h before gtktextutil.h.

2008-06-23  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkinvisible.h: formatting.

2008-06-23  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkaction.h
	* gtk/gtkbuildable.h